--- a/styles/components/About.module.scss
+++ b/styles/components/About.module.scss
@@ -4,5 +4,5 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  background: RGB($lightBlue);
+  background: var(--lightBlue);
 }
