--- a/styles/components/Hero.module.scss
+++ b/styles/components/Hero.module.scss
@@ -1,20 +1,48 @@
 ._ {
   display: flex;
+  padding: 2rem 0;
   flex-direction: column;
   width: 100%;
-  height: 44vw;
   background: var(--white);
   display: flex;
   justify-content: center;
   align-items: center;
   .content {
     padding: 4%;
+    width: 100%;
     max-width: 700px;
     @include _minWidthMobile {
       padding: 2rem;
+      width: 50%;
     }
+  }
+  h1 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+
+    @include _minWidthTablet {
+      font-size: 3rem;
+      line-height: 3.5rem;
+    }
+    @include _minWidthMedium {
+      font-size: 3.5rem;
+      line-height: 4rem;
+    }
+  }
+  p {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+    margin: 1rem 0;
+  }
+  .graphic {
+    width: 100%;
+    max-width: 700px;
   }
   @include _minWidthMobile {
     flex-direction: row;
+
+    .graphic {
+      width: 45%;
+    }
   }
 }
