--- a/styles/global/styles.scss
+++ b/styles/global/styles.scss
@@ -124,21 +124,27 @@ h6 {
 //Based off this typescale https://type-scale.spencermortensen.com/6/3.25/0/16px
 h1 {
   font-size: 3.25rem;
+  line-height: 4rem;
 }
 h2 {
   font-size: 2.6rem;
+  line-height: 3.1rem;
 }
 h3 {
   font-size: 2.2rem;
+  line-height: 2.8rem;
 }
 h4 {
   font-size: 1.8rem;
+  line-height: 2.3rem;
 }
 h5 {
   font-size: 1.5rem;
+  line-height: 2rem;
 }
 h6 {
   font-size: 1.22rem;
+  line-height: 1.8rem;
 }
 small {
   font-size: 0.8125rem;
@@ -146,8 +152,6 @@ small {
 
 #main-wrapper {
   min-height: 90.75vh;
-  display: flex;
-  flex-direction: column;
 }
 
 @media (prefers-color-scheme: dark) {
