--- a/styles/components/CreditsWrapper.module.scss
+++ b/styles/components/CreditsWrapper.module.scss
@@ -15,6 +15,7 @@
       transition: color var(--default-transition);
       &:after {
         background: var(--softGray);
+        height: 1px;
       }
       &:hover {
         color: var(--softGray);
