--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -3,6 +3,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: var(--red);
-  color: var(--white);
+  background-color: var(--header-background);
+  color: var(--header-foreground);
 }
