--- a/styles/components/CreditsWrapper.module.scss
+++ b/styles/components/CreditsWrapper.module.scss
@@ -5,23 +5,25 @@
 
   .credits {
     font-family: var(--sanserif-font);
-    text-transform: uppercase;
+    display: inline-block;
+    margin: 0 auto;
     font-size: 0.65rem;
     text-align: center;
-    flex-direction: column;
     gap: 10px;
-    a {
+    text-transform: uppercase;
+    color: var(--softGray);
+    transition: color var(--default-transition);
+    &:visited {
       color: var(--softGray);
-      transition: color var(--default-transition);
+    }
+    &:after {
+      background: var(--softGray);
+      height: 1px;
+    }
+    &:hover {
+      color: var(--softGray);
       &:after {
         background: var(--softGray);
-        height: 1px;
-      }
-      &:hover {
-        color: var(--softGray);
-        &:after {
-          background: var(--softGray);
-        }
       }
     }
   }
