comments, file re-arrangements

--- a/styles/global/styles.scss
+++ b/styles/global/styles.scss
@@ -13,6 +13,7 @@
   --default-transition: 0.2s ease-out;
   /////// COLORS ///////
   //NOTE: HSL reads as hsl(hue, saturation, lightness)
+  //All of these theme colors should also be added to the
   --red: hsl(7, 99%, 65%); //#ff725e
   --darkRed: hsl(7, 65%, 56%); //#ff725e
   --white: hsl(60, 12%, 97%); //#f7f8f6
