--- a/styles/components/Intro.module.scss
+++ b/styles/components/Intro.module.scss
@@ -34,8 +34,8 @@
       width: 30%;
     }
   }
-  @include _prefersDark {
-    background-color: darken($darkBlue, 4%);
-    color: var(--white);
-  }
+  // @include _prefersDark {
+  //   background-color: darken($darkBlue, 4%);
+  //   color: var(--white);
+  // }
 }
