--- a/styles/components/Hero.module.scss
+++ b/styles/components/Hero.module.scss
@@ -7,9 +7,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  @include _prefersDark {
-    background: var(--darkBlue);
-  }
+  // @include _prefersDark {
+  //   background: var(--darkBlue);
+  // }
   .content {
     padding: 4%;
     width: 100%;
