--- a/styles/components/ProgramSection.module.scss
+++ b/styles/components/ProgramSection.module.scss
@@ -12,15 +12,15 @@
     padding-bottom: $baseVerticalPadding;
   }
 
-  @include _prefersDark {
-    background-color: var(--darkBlue);
-    color: var(--white);
-  }
+  // @include _prefersDark {
+  //   background-color: var(--darkBlue);
+  //   color: var(--white);
+  // }
 
-  @include _prefersDark {
-    background-color: var(--medBlue);
-    h2 {
-      color: var(--white);
-    }
-  }
+  // @include _prefersDark {
+  //   background-color: var(--medBlue);
+  //   h2 {
+  //     color: var(--white);
+  //   }
+  // }
 }
