--- a/styles/global/utilities.scss
+++ b/styles/global/utilities.scss
@@ -21,6 +21,11 @@ $container: 1400px;
 $baseVerticalPadding: 2rem;
 $baseHorizontalPadding: 6%;
 
+@mixin containMe($width: $container) {
+  max-width: $width;
+  margin-left: auto;
+  margin-right: auto;
+}
 @mixin _basePadding {
   padding: $baseVerticalPadding $baseHorizontalPadding;
 }
