--- a/styles/components/Programs.module.scss
+++ b/styles/components/Programs.module.scss
@@ -9,10 +9,18 @@
   }
   .text {
     width: 50%;
+    padding: 2rem 4%;
+    @include _minWidthTablet {
+      padding: 4rem 6%;
+    }
+  }
+  [class*='swiper-slide'] {
+    text-align: center;
   }
 
   .slide {
     width: 100%;
+    text-align: center;
 
     img {
       width: 100%;
